Build works under JDK11 now (just need to set java.source.version properties in top-level pom.xml)
Fixed localization of "Cancel" button in login.zul